<resources>
    <string name="app_name">DT Bazar</string>
    <string name="title_home">Home</string>
    <string name="title_store">Store</string>
    <string name="title_food">Food</string>

    <string name="store_details_total_donation"> %.2f</string>
    <string name="store_details_spent_donation"> %.2f</string>
    <string name="store_food_donation"> %.2f</string>
    <string name="store_food_spent_donation"> %.2f</string>
    <string name="store_food_item_price"><b>%1$s %2$.2f/%3$s</b> (%4$.2f)</string>
    <string name="title_food_suggestion_spinner"><b>%1$s</b> (%2$s/%3$s)</string>
    <string name="two_decimal">%.2f</string>
    <string name="qty_rate">%1$.1f x %2$.2f</string>
    <string name="pay_button">COLLECT %1$s %2$.2f</string>
    <string name="home_donation_item">%1$s %2$.2f</string>
    <string name="hint_donation_qty">Donation Quantity (%s)</string>
    <string name="hint_food_qty">Quantity (%s)</string>
    <string name="hint_food_price">1 %1$s Price (%2$s)</string>
    <string name="bt_make_donation">Make Donation\n%1$s %2$.2f</string>

    <string-array name="food_unit">
        <item>KG</item>
        <item>L</item>
        <item>PCS</item>
        <item>G</item>
        <item>ML</item>
        <item>LB</item>
        <item>OZ</item>
    </string-array>

    <string name="btn_add_store">Add Store</string>
    <string name="hint_store_name">Store Name</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_store_address">Store Address</string>
    <string name="rb_donate">DONATE</string>
    <string name="rb_sell">SELL</string>
    <string name="rb_stock">Stock</string>
    <string name="bt_cancel">Cancel</string>
    <string name="title_my_stores">MY STORES</string>
    <string name="bt_add_new_store">Add New Store</string>
    <string name="title_my_donations">MY DONATIONS</string>
    <string name="bt_make_a_donation">Make a donation</string>
    <string name="title_foods">Foods</string>
    <string name="hint_buyer_name">Buyer Name</string>
    <string name="hint_national_id_no">National ID no.</string>
    <string name="hint_food_name">Food Name</string>
    <string name="text_currency">Currency</string>
    <string name="text_bdt">BDT</string>
    <string name="text_usd">USD</string>
    <string name="text_measure_unit">Measure Unit</string>
    <string name="text_starting_price">Starting Price</string>
    <string name="text_ending_price">Ending Price</string>
    <string name="bt_add_food">Add Food</string>
    <string name="title_select_food">Select Food</string>
    <string name="bt_add_food_to_store">Add Food To Store</string>
    <string name="title_invoice">INVOICE</string>
    <string name="text_invoice_name">Name:</string>
    <string name="text_invoice_date">Date:</string>
    <string name="text_invoice_food">Food</string>
    <string name="text_invoice_qty_x_rate">Qty x Rate</string>
    <string name="text_invoice_amount">Amount</string>
    <string name="text_invoice_total">Total</string>
    <string name="text_invoice_donation">Donation</string>
    <string name="text_invoice_less_80">less 80%</string>
    <string name="text_invoice_outstanding">Outstanding</string>
    <string name="text_failed_to_load">Failed To Load</string>
    <string name="bt_retry">Retry</string>
    <string name="bt_filter">Filter</string>
    <string name="title_fragment_login">Welcome to DT Bazar</string>
    <string name="text_version">Version: %s</string>
    <string name="title_about_dtbazar">About DT Bazar</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about">About</string>
    <string name="title_about_fragment">দশ টাকার বাজার or Ten Cent Market</string>
    <string name="text_about_fragment">A virtual market where people can directly donate to a specific food at a specific shop so that poor people can buy that food at a cheap rate. Initially, the donation will cover 80% of the actual price though the project name suggest a fixed price i.e. ten cent but practically is not possible for a wide variety of food types. However, if we include foods with price ~50 cent then people will be able to buy it for ~10 cent. So, we should primarily focus on some basic foods which are sold under USD 1.
        \n
        \nThe 3 simple steps:
        \n
        \n\u2022 Store owner creates store and adds food that will receive donation
        \n\u2022 Donor finds a nearby store and donates to a food at that store
        \n\u2022 Poor people buy food at a reduced rate by scanning their national id card at that store
    </string>
    <string name="bt_open_source_licences">Open Source Licences</string>
    <string name="bt_terms_of_service">Terms of Service</string>
    <string name="bt_privacy_policy">Privacy Policy</string>
    <string name="menu_reload">Reload</string>
    <string name="menu_pending_donation">Pending Donation</string>
    <string name="cd_profile_picture">Profile Picture</string>
    <string name="et_facebook_access_token">Facebook Access Token</string>
    <string name="cd_map_picker">Map Picker</string>
    <string name="text_update">This version of DT Bazar is expired. Please update it from Play Store.</string>
    <string name="bt_update">Update</string>
    <string name="cd_app_icon">App Icon</string>
    <string name="toast_try_agin">Please try again after sometime</string>
    <string name="toast_approved">Approved</string>
    <string name="toast_failed_to_approve">Failed to Approve. %s</string>
    <string name="accept_pending_donation">Accept donation %1$s %2$.2f to %3$s from %4$s</string>
</resources>
