<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <import type="app.roaim.dtbazar.utils.ExtensionsKt" />

        <import type="app.roaim.dtbazar.model.Status" />

        <import type="app.roaim.dtbazar.model.Result" />

        <import type="app.roaim.dtbazar.model.Store" />

        <variable
            name="store"
            type="Result&lt;Store>" />

        <variable
            name="listener"
            type="app.roaim.dtbazar.ui.home.ViewAddStoreButtonClickListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="@{store.status == Status.LOADING ? View.VISIBLE : View.GONE}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@{store.msg}"
            android:textColor="@color/colorAccent"
            android:visibility="@{store.status == Status.FAILED ? View.VISIBLE : View.GONE}" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/hint_store_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                android:maxLines="1"
                clearText="@{store}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/etAddress"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/hint_mobile_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMobile"
                clearText="@{store}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:nextFocusDown="@id/etAddress"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/hint_store_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddress"
                android:imeOptions="actionDone"
                android:inputType="textPostalAddress|textCapWords"
                android:maxLines="1"
                clearText="@{store}"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/ic_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>


        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:enabled="@{store.status != Status.LOADING}"
            android:onClick="@{()->listener.onAddStoreClick(ExtensionsKt.value(etMobile), ExtensionsKt.value(etAddress), ExtensionsKt.value(etName))}"
            android:text="@string/btn_add_store" />

        <!--<Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="#8FB1B5"
            android:onClick="@{()->listener.onCancelClick()}"
            android:text="Cancel" />-->

    </LinearLayout>

</layout>