<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginCheckFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="app.roaim.dtbazar.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_storeDetailsFragment"
            app:destination="@id/navigation_store_details"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out">
            <argument
                android:name="storeId"
                app:argType="string" />
            <argument
                android:name="storeName"
                app:nullable="true"
                app:argType="string" />
            <argument
                android:name="uid"
                app:nullable="true"
                app:argType="string" />
            <argument
                android:name="proprietor"
                app:nullable="true"
                app:argType="string" />
            <argument
                android:name="mobile"
                app:nullable="true"
                app:argType="string" />
            <argument
                android:name="allFoodPrice"
                app:argType="float" />
            <argument
                android:name="totalDonation"
                app:argType="float" />
            <argument
                android:name="spentDonation"
                app:argType="float" />
        </action>
        <action
            android:id="@+id/action_navigation_home_to_navigation_store"
            app:destination="@id/navigation_store"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_navigation_home_to_addStoreFragment"
            app:destination="@id/addStoreFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_store"
        android:name="app.roaim.dtbazar.ui.store.StoreFragment"
        android:label="@string/title_store"
        tools:layout="@layout/fragment_store">
        <action
            android:id="@+id/action_navigation_store_to_storeDetailsFragment"
            app:destination="@id/navigation_store_details"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out">
            <argument
                android:name="storeId"
                app:argType="string" />
            <argument
                android:name="storeName"
                app:nullable="true"
                app:argType="string" />
            <argument
                android:name="uid"
                app:nullable="true"
                app:argType="string" />
            <argument
                android:name="proprietor"
                app:nullable="true"
                app:argType="string" />
            <argument
                android:name="mobile"
                app:nullable="true"
                app:argType="string" />
            <argument
                android:name="allFoodPrice"
                app:argType="float" />
            <argument
                android:name="totalDonation"
                app:argType="float" />
            <argument
                android:name="spentDonation"
                app:argType="float" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_food"
        android:name="app.roaim.dtbazar.ui.food.FoodFragment"
        android:label="@string/title_food"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="app.roaim.dtbazar.ui.login.LoginFragment"
        android:label="@string/title_fragment_login"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_loginFragment_to_navigation_home"
            app:launchSingleTop="true"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_login_to_aboutFragment"
            app:destination="@id/navigation_about"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/navigation_store_details"
        tools:layout="@layout/fragment_store_details"
        android:name="app.roaim.dtbazar.ui.store_details.StoreDetailsFragment"
        android:label="{storeName}">
        <argument
            android:name="storeId"
            app:argType="string" />
        <argument
            android:name="storeName"
            android:defaultValue="Store Details"
            app:argType="string" />
        <argument
            android:name="uid"
            app:nullable="true"
            app:argType="string" />
        <argument
            android:name="proprietor"
            app:nullable="true"
            app:argType="string" />
        <argument
            android:name="mobile"
            app:nullable="true"
            app:argType="string" />
        <argument
            android:name="allFoodPrice"
            app:argType="float" />
        <argument
            android:name="totalDonation"
            app:argType="float" />
        <argument
            android:name="spentDonation"
            app:argType="float" />
        <action
            app:enterAnim="@anim/slide_in_bottom"
            app:exitAnim="@anim/slide_out_top"
            app:popEnterAnim="@anim/slide_in_top"
            app:popExitAnim="@anim/slide_out_bottom"
            android:id="@+id/action_navigation_store_details_to_pendingDonationFragment"
            app:destination="@id/pendingDonationFragment">
            <argument
                android:name="storeId"
                app:argType="string"
                app:nullable="false" />
            <argument
                android:name="isOwner"
                app:argType="boolean" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/loginCheckFragment"
        android:name="app.roaim.dtbazar.ui.login.LoginCheckFragment"
        android:label="" >
        <action
            android:id="@+id/action_loginCheckFragment_to_navigation_login"
            app:destination="@id/navigation_login" />
        <action
            android:id="@+id/action_loginCheckFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/pendingDonationFragment"
        android:name="app.roaim.dtbazar.ui.store_details.PendingDonationFragment"
        android:label="Pending Donation"
        tools:layout="@layout/fragment_pending_donation">
        <argument
            android:name="storeId"
            app:argType="string"
            app:nullable="false" />
        <argument
            android:name="isOwner"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/addStoreFragment"
        android:name="app.roaim.dtbazar.ui.home.AddStoreFragment"
        tools:layout="@layout/fragment_add_new_store"
        android:label="Add New Store" />
    <fragment
        android:id="@+id/navigation_about"
        android:name="app.roaim.dtbazar.ui.AboutFragment"
        android:label="@string/title_about_dtbazar"
        tools:layout="@layout/fragment_about" />

</navigation>
