<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <import type="app.roaim.dtbazar.utils.ExtensionsKt" />

        <import type="app.roaim.dtbazar.model.Status" />

        <import type="app.roaim.dtbazar.model.Result" />

        <import type="app.roaim.dtbazar.model.StoreFood" />

        <variable
            name="food"
            type="app.roaim.dtbazar.model.Food" />

        <variable
            name="storeFood"
            type="Result" />

        <variable
            name="listener"
            type="app.roaim.dtbazar.ui.store_details.ViewAddStoreFoodClickListener" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="@{storeFood.status == Status.LOADING ? View.VISIBLE : View.INVISIBLE}" />

            <TextView
                android:id="@+id/tvc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="-4dp"
                android:text="@string/title_select_food"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@{@string/hint_food_price(food.unit, food.currency)}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUnitPrice"
                    clearText="@{storeFood}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:nextFocusDown="@id/etStockQty"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@{@string/hint_food_qty(food.unit)}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etStockQty"
                    clearText="@{storeFood}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:enabled="@{storeFood.status != Status.LOADING}"
                android:onClick="@{()->listener.onAddStoreFoodClick(ExtensionsKt.value(etStockQty), ExtensionsKt.foodUnitPrice(etUnitPrice, food))}"
                android:text="@string/bt_add_food_to_store" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="#8FB1B5"
                android:onClick="@{()->listener.onCancelClick()}"
                android:text="@string/bt_cancel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@{storeFood.msg}"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </ScrollView>
</layout>